syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ggwadera";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.ggwadera;

import "google/protobuf/timestamp.proto";

service RegisterKeyService {
    rpc RegisterPixKey (NewPixKeyRequest) returns (NewPixKeyReply) {};
}

service DeleteKeyService {
    rpc DeletePixKey (DeletePixKeyRequest) returns (DeletePixKeyReply) {};
}

service FindKeyService {
    rpc FindPixKey (FindPixKeyRequest) returns (PixKeyDetailsReply) {};
}

enum KeyType {
    KEY_TYPE_UNSPECIFIED = 0;
    CPF = 1;
    PHONE = 2;
    EMAIL = 3;
    RANDOM = 4;
}

enum AccountType {
    ACCOUNT_TYPE_UNSPECIFIED = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message NewPixKeyRequest {
    string client_id = 1;
    string key = 2;
    KeyType key_type = 3;
    AccountType account_type = 4;
}

message NewPixKeyReply {
    string pix_id = 1;
}

message DeletePixKeyRequest {
    string client_id = 1;
    string pix_id = 2;
}

message DeletePixKeyReply {
    string client_id = 1;
    string pix_id = 2;
}

message FindPixKeyRequest {
    message ById {
        string client_id = 1;
        string pix_id = 2;
    }

    oneof option {
        ById ids = 1;
        string key = 2;
    }
}

message PixKeyDetailsReply {

    message KeyOwner {
        string name = 1;
        string cpf = 2;
    }

    message KeyAccount {
        string name = 1;
        string branch = 2;
        string account_number = 3;
        AccountType account_type = 4;
    }

    string pix_id = 1;
    string client_id = 2;
    KeyType key_type = 3;
    string key = 4;
    KeyOwner owner = 5;
    KeyAccount account = 6;
    google.protobuf.Timestamp created_at = 7;
}